--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         networks:
             - minecraft
         ports:
-            - ${BEDROCK_CONNECT_PORT:-19132}:19132
+            - ${BEDROCK_CONNECT_PORT:-19132}:19132/udp
         volumes:
             - ./data:/data
         restart: unless-stopped
